Fourth session confirmed as databases

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <tr> <td>10:00</td>  <td>Introduction to scientific programming with Python</td> </tr>
       <tr> <td>11:30</td>  <td>Coffee</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td>  <td>TBD</td> </tr>
+      <tr> <td>14:00</td>  <td>Databases</td> </tr>
       <tr> <td>15:30</td>  <td>Coffee</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
     </table>
@@ -312,7 +312,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-sql">TBD</h3>
+    <h3 id="syllabus-sql">Databases</h3>
     <ul>
       <li> - </li>
       <li> - </li>
