Add instruction to sqlite setup, and drop-in session info.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <strong>Requirements:</strong> Participants must bring a laptop with a
   Mac, Linux, or Windows operating system (not a tablet, Chromebook, etc.) that they have administrative privileges
   on. They should have a few specific software packages installed (listed
-  <a href="#setup">below</a>). They are also required to abide by
+  <a href="#setup">below</a>). 
+  If any help is needed for the set-up, assistance will be provided at a drop-in session on 
+  <strong>Wednesday April 26, 9:00-11:00am</strong> at the Institute of Advanced Studies 
+  Common Ground, <a href="http://www.ucl.ac.uk/maps/south-wing">South Wing</a>, as well as 
+  at the workshop venue before the starting time on the first day.
+</p>
+<p>
+  They are also required to abide by
   Software Carpentry's
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
 </p>
@@ -687,6 +694,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     </div>
   </div>
 
+  <p>To check that the software is installed properly, type <code>sqlite3</code> in a terminal.</p>
+  
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
