--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ humantime: "09:30 am - 5:00 pm"    # human-readable times for the workshop (e.g.
 startdate: 2017-04-27      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-04-28        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Tom Dowrick", "Jonathan Cooper", "David Pérez-Suárez", "Ben Waugh"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["TBD"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Vilma Agalioti-Sgompou", "Ilektra Christidi", "Tom Couch", "Kosmas Deligkaris", "Ismail Moghul", "Chris Monit", "Martha Robinson", "Chris Wallis"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["rc-softdev@ucl.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad: http://pad.software-carpentry.org/2017-04-27-UCL # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
