--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 {% if page.etherpad %}
 <p id="etherpad">
-  <strong>Etherpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
+  <strong>Etherpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>
+  (<a href="files/2017-04-27-UCL.html">archived version</a>).
   <br/>
   We will use this Etherpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
